@@ -3,6 +3,7 @@
 - Fixed the mixed content warning for the Google Fonts API calls.
 - Fixed the banner responsive JS on single posts
 - Fixed the Isotope filtering using the Packery Library
+- Changed the names of the Google Font Classes
 ### Updated
 - Isotope jQuery Library 2.1.1
 ### Added
